[package]
name = "uniclip"
version = "0.1.0"
edition = "2021"
authors = ["zu1k <i@zu1k.com>"]


[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1


[dependencies]
anyhow = "1.0"
arboard = { version = "2.1", features = [] }
bytes = "1.1"
cfg-if = "1.0"
config = { version = "0.13", default-features = false, features = ["toml"] }
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.18", features = ["sync", "rt-multi-thread", "macros"] }
tray-item = "0.7"
uniclip-net = { path = "uniclip-net" }
uniclip-proto = { path = "uniclip-proto" }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.15"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
ProductName = "UniClip"
ProductVersion = "0.1.0"
FileDescription = "UniClip"
OriginalFilename = "UniClip.exe"
LegalCopyright = "Copyright © 2022"


[workspace]
members = [
    "uniclip-android-lib",
    "uniclip-proto",
    "uniclip-net",
]
