[package]
name = "uniclip-android-lib"
version = "0.1.0"
edition = "2021"
authors = ["zu1k <i@zu1k.com>"]


[dependencies]
android_logger = "0.11"
jni = "0.19"
lazy_static = "1.4"
log = "0.4"
uniclip-net = { path = "../uniclip-net" }
uniclip-proto = { path = "../uniclip-proto" }
tokio = { version = "1.18", features = ["sync", "rt-multi-thread", "macros"] }


[lib]
name = "uniclip"
crate-type = ["lib", "cdylib"]
