[package]
name = "uniclip-net"
version = "0.1.0"
edition = "2021"
authors = ["zu1k <i@zu1k.com>"]


[dependencies]
futures = "0.3"
tokio = { version = "1.18", features = ["sync", "rt-multi-thread", "macros"] }
prost = "0.10"
uniclip-proto = { path = "../uniclip-proto" }

[dependencies.libp2p]
# path = "../../crates/rust-libp2p"
git = "https://github.com/libp2p/rust-libp2p.git"
default-features = false
features = [
    "autonat",
    # "dcutr",
    "identify",
    "tcp-tokio",
    "gossipsub",
    "mdns",
    "mplex",
    "noise",
    "pnet",
    "relay",
    "rendezvous",
]
