[package]
name = "uniclip-relay"
version = "0.1.0"
edition = "2021"
description = "relay, autonat, rendezvous"


[dependencies]
clap = { version = "3.1", features = ["derive"] }
env_logger = "0.9"
futures = "0.3"
log = "0.4"


[dependencies.libp2p]
# path = "../../crates/rust-libp2p"
git = "https://github.com/libp2p/rust-libp2p.git"
default-features = false
features = [
    "ping",
    "identify",
    "autonat",
    "tcp-async-io",
    "mplex",
    "noise",
    "relay",
    "rendezvous",
]
